Eliminate nullness errors from org.apache.beam.sdk.io